--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# Server Settings
+server.display-name=product-catalogue
+server.servlet.context-path=/product-catalogue
+server.port=8282
 
+# product provider urls
+product.provider.base.url=http://localhost:8181/product-provider
+product.provider.fetch.all.products=${product.provider.base.url}/products
