--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.disney</groupId>
-  <artifactId>product-catalogue-consumer</artifactId>
+  <artifactId>inpark-service-consumer</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>product-catalogue-consumer</name>
+  <name>inpark-service-consumer</name>
   <description>Demo project for PACT</description>
   <properties>
     <java.version>11</java.version>
@@ -45,6 +45,12 @@
       <artifactId>springfox-swagger2</artifactId>
       <version>2.9.0</version>
     </dependency>
+    <!-- PACT dependency -->
+    <dependency>
+      <groupId>au.com.dius</groupId>
+      <artifactId>pact-jvm-consumer-junit5</artifactId>
+      <version>4.0.10</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -60,6 +66,11 @@
             </exclude>
           </excludes>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>au.com.dius.pact.provider</groupId>
+        <artifactId>maven</artifactId>
+        <version>4.1.11</version>
       </plugin>
     </plugins>
   </build>
