--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 # Server Settings
-server.display-name=product-catalogue
-server.servlet.context-path=/product-catalogue
+server.display-name=inpark-ticket
+server.servlet.context-path=/inpark-ticket
 server.port=8282
 
-# product provider urls
-product.provider.base.url=http://localhost:8181/product-provider
-product.provider.fetch.all.products=${product.provider.base.url}/products
+# ticket provider urls
+ticket.provider.base.url=http://localhost:8181/ticket-provider
